--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="createId"><u>계정 새로 만들기</u></string>
     <string name="more"><u>더보기</u></string>
 
-<!--    <string name="default_web_client_id">988570535680-9966l32h6relolv7knosv9k063reikch.apps.googleusercontent.com</string>-->
+    <!--    <string name="default_web_client_id">988570535680-9966l32h6relolv7knosv9k063reikch.apps.googleusercontent.com</string>-->
     <!-- Login -->
     <string name="success_login">로그인 성공</string>
     <string name="failed_login"><u>로그인 실패</u></string>
@@ -11,8 +11,8 @@
 
     <!-- Main -->
     <string name="main_btm_nav_home_title">홈</string>
-    <string name="main_btm_nav_townLife_title">함께갈곳</string>
-    <string name="main_btm_nav_chat_title">예약</string>
+    <string name="main_btm_nav_townLife_title">찜</string>
+    <string name="main_btm_nav_chat_title">이용권</string>
     <string name="main_btm_nav_my_page_title">프로필</string>
 
 
