--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="main_btm_nav_home_title">홈</string>
     <string name="main_btm_nav_townLife_title">찜</string>
     <string name="main_btm_nav_chat_title">이용권</string>
-    <string name="main_btm_nav_my_page_title">프로필</string>
+    <string name="main_btm_nav_my_page_title">일정</string>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
